--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -50,7 +50,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ἧμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν.
+        ἡμεῖς δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν.
     </td>
     <td> 
         I was glad to receive your request and felt constrained to answer it by pleasant expectations for the future.
