--- a/Third_Meditation_Veitch_Bilingual (master).html
+++ b/Third_Meditation_Veitch_Bilingual (master).html
@@ -256,8 +256,54 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
         But the chief and most ordinary error that arises in them consists in judging that the ideas which are in us are like or conformed to the things that are external to us; for assuredly, if we but considered the ideas themselves as certain modes of our thought (consciousness), without referring them to anything beyond, they would hardly afford any occasion of error.
     </td>
 </tr>
-
-
+<tr>
+    <td>
+        7. Ex his autem ideis aliae innatae, aliae adventitiae, aliae a me ipso factae mihi videntur: nam quòd intelligam quid sit res, quid sit veritas, quid sit cogitatio, hacc non aliunde habere videor quàm ab ipsâmet meâ naturâ; quòd autem nunc strepitum audiam, solem videam, ignem sentiam, a rebus quibusdam extra me positis procedere hactenus judicavi; ac denique Syrenes, Hippogryphes, & similia, a me ipso finguntur.
+    </td>
+    <td> 
+        7. But among these ideas, some appear to me to be innate, others adventitious, and others to be made by myself (factitious); for, as I have the power of conceiving what is called a thing, or a truth, or a thought, it seems to me that I hold this power from no other source than my own nature; but if I now hear a noise, if I see the sun, or if I feel heat, I have all along judged that these sensations proceeded from certain objects existing out of myself; and, in fine, it appears to me that sirens, hippogryphs, and the like, are inventions of my own mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        Vel forte etiam omnes esse adventitias possum putare, vel omnes innatas, vel omnes factas: nondum enim veram illarum originem clare perspexi.
+    </td>
+    <td> 
+        But I may even perhaps come to be of opinion that all my ideas are of the class which I call adventitious, or that they are all innate, or that they are all factitious; for I have not yet clearly discovered their true origin.
+    </td>
+</tr>
+<tr>
+    <td>
+        8. Sed hîc praecipue de iis est quaerendum, quas tanquam a rebus extra me existentibus desumptas considero, quaenam me moveat ratio ut illas istis rebus similes esse existimem.
+    </td>
+    <td> 
+        8. What I have here principally to do is to consider, with reference to those that appear to come from certain objects without me, what grounds there are for thinking them like these objects.
+    </td>
+</tr>
+<tr>
+    <td>
+        Nempe ita videor doctus a naturâ.
+    </td>
+    <td> 
+        The first of these grounds is that it seems to me I am so taught by nature;
+    </td>
+</tr>
+<tr>
+    <td>
+        Et praeterea experior illas non a meâ voluntate nec proinde a me ipso pendere; saepe enim vel invito obversantur: ut jam, sive velim, sive nolim, sentio calorem, & ideo puto sensum illum, sive ideam caloris, a re a me diversâ, nempe ab ignis cui assideo calore, mihi advenire.
+    </td>
+    <td> 
+        and the second that I am conscious that those ideas are not dependent on my will, and therefore not on myself, for they are frequently presented to me against my will, as at present, whether I will or not, I feel heat; and I am thus persuaded that this sensation or idea (sensum vel ideam) of heat is produced in me by something different from myself, viz., by the heat of the fire by which I sit.
+    </td>
+</tr>
+<tr>
+    <td>
+        Nihilque magis obvium est, quàm ut luc judicem istam rem suam similitudinem potius quàm aliud quid in me immittere.
+    </td>
+    <td> 
+        And it is very reasonable to suppose that this object impresses me with its own likeness rather than any other thing.
+    </td>
+</tr>
 
 
 </table>
@@ -268,7 +314,7 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
 
 <h3>Paragraph 3</h3>
 
-<p>Here we see the origins of the indirect realism that even now sits like a parasite on philosophy, draining it of its vitality. It is the epitome of a sophomoric position, since it appears to be the result of Cartesian rigor. "Strictly speaking, we do not have access to the objects of perception, but only the mental states that those objects give rise to. We must therefore strive to build axiomatically from perceptions before we even admit the existence of external objects." So profound. Bertrand Russell was to waste his tremendous mental energies on solving this riddle for decades. But indirect realism in fact not even a coherent position. Our only concept of what constitutes an "object" is given by the senses. There is no other apple than the apple that is seen and tasted. Thus to introduce the possibility that our senses do not capture the true objects, is to postulate an empty concept: the imperceptible object. What has not been sufficiently appreciated in the literature (which still takes the indirect realist position seriously as a philosophical position) is that it has emerged from Descartes's obsessive desire to reduce human knowledge to an axiomatic system. Nor that this desire is actually a sublimation of Christian self-doubt. Faced with the Nietzschean abyss of materialism, Descartes sought to build an impenetrable castle to withstand the abyss's onslaught. The earth, sky, and stars would have to be sacrificed so that Descartes could retreat into his own mind.</p>
+<p>Here we see the origins of the indirect realism that even now sits like a parasite on philosophy, draining it of its vitality. It is the epitome of a sophomoric position, since it appears to be the result of Cartesian rigor. "Strictly speaking, we do not have access to the objects of perception, but only the mental states that those objects give rise to. We must therefore strive to build axiomatically from perceptions before we even admit the existence of external objects." In fact it is an artefact of Descartes's manufactured skepticism. We have to concede the possibility of a magical demon with supernatural powers to understand the rationale for such a position. Bertrand Russell was to waste his tremendous mental energies on solving this riddle for decades. But indirect realism in fact not even a coherent position. Our only concept of what constitutes an "object" is given by the senses. There is no other apple than the apple that is seen and tasted. Thus to introduce the possibility that our senses do not capture the true objects, is to postulate an empty concept: the imperceptible object. What has not been sufficiently appreciated in the literature (which still takes the indirect realist position seriously as a philosophical position) is that it has emerged from Descartes's obsessive desire to reduce human knowledge to an axiomatic system. Nor that this desire is actually a sublimation of Christian self-doubt. Faced with the Nietzschean abyss of materialism, Descartes sought to build an impenetrable castle to withstand the abyss's onslaught. The earth, sky, and stars would have to be sacrificed so that Descartes could retreat into his own mind.</p>
 
 <h3>Paragraph 4</h3>
 
