Up to accented upsilons

--- a/Third_Meditation_Veitch_Bilingual (master).html
+++ b/Third_Meditation_Veitch_Bilingual (master).html
@@ -304,6 +304,72 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
         And it is very reasonable to suppose that this object impresses me with its own likeness rather than any other thing.
     </td>
 </tr>
+<tr>
+    <td>
+        9. Quae rationes, an satis firmae sint, jam videbo.
+    </td>
+    <td>
+        9. But I must consider whether these reasons are sufficiently strong and convincing.
+    </td>
+</tr>
+<tr>
+    <td>
+        Cùm hîc dico me ita doctum esse a naturâ, intelligo tantùm spontaneo quòdam impetu me ferri ad hoc credendum, non lumine aliquo naturali mihi ostendi esse verum.
+    </td>
+    <td>
+        When I speak of being taught by nature in this matter, I understand by the word nature only a certain spontaneous impetus that impels me to believe in a resemblance between ideas and their objects, and not a natural light that affords a knowledge of its truth.
+    </td>
+</tr>
+<tr>
+    <td>
+        Quae duo multum discrepant; nam quaecumque lumine naturali mihi ostenduntur, ut quòd ex eo quòd dubitem, sequatur me esse, & similia, nullo modo dubia esse possunt, quia nulla alia facultas esse potest, cui aeque fidam ac lumini isti, quaeque illa non vera esse possit docere; sed quantum ad impetus naturales, jam saepe olim judicavi me ab illis in deteriorem partem fuisse impulsum, cùm de bono eligendo ageretur, nec video cur iisdem in ullâ aliâ re magis fidam. 
+    </td>
+    <td>
+        But these two things are widely different; for what the natural light shows to be true can be in no degree doubtful, as, for example, that I am because I doubt, and other truths of the like kind; inasmuch as I possess no other faculty whereby to distinguish truth from error, which can teach me the falsity of what the natural light declares to be true, and which is equally trustworthy; but with respect to [seemingly] natural impulses, I have observed, when the question related to the choice of right or wrong in action, that they frequently led me to take the worse part; nor do I see that I have any better ground for following them in what relates to truth and error. 
+    </td>
+</tr>
+<tr>
+    <td>
+        10. Deinde, quamvis ideae illae a voluntate meâ non pendeant, non ideo constat ipsas a rebus extra me positis necessario procedere. Ut enim impetus illi, de quibus mox loquebar, quamvis in me sint, a voluntate tamen meâ diversi esse videntur, ita forte etiam aliqua alia est in me facultas, nondum mihi satis cognita, istarum idearum effectrix, ut hactenus semper visum est illas, dum somnio, absque ullâ rerum externarum ope, in me formari.
+    </td>
+    <td>
+        10. Then, with respect to the other reason, which is that because these ideas do not depend on my will, they must arise from objects existing without me, I do not find it more convincing than the former, for just as those natural impulses, of which I have lately spoken, are found in me, notwithstanding that they are not always in harmony with my will, so likewise it may be that I possess some power not sufficiently known to myself capable of producing ideas without the aid of external objects, and, indeed, it has always hitherto appeared to me that they are formed during sleep, by some power of this nature, without the aid of aught external.
+    </td>
+</tr>
+<tr>
+    <td>
+        11. Ac denique, quamvis a rebus a me diversis procederent, non inde sequitur illas rebus istis similes esse debere.
+    </td>
+    <td>
+        11. And, in fine, although I should grant that they proceeded from those objects, it is not a necessary consequence that they must be like them.
+    </td>
+</tr>
+<tr>
+    <td>
+        Quinimo in multis saepe magnum discrimen videor deprehendisse:  
+    </td>
+    <td>
+        On the contrary, I have observed, in a number of instances, that there was a great difference between the object and its idea.
+    </td>
+</tr>
+<tr>
+    <td>
+        ut, exempli causâ, duas diversas solis ideas apud me invenio, unam tanquam a sensibus haustam, & quae maxime inter illas quas adventitias existimo est recensenda, per quam mihi valde parvus apparet, aliam verò ex rationibus Astronomiae desumptam, hoc est ex notionibus quibusdam mihi innatis elicitam, vel quocumque alio modo a me factam, per quam aliquoties major quàm terra exhibetur;
+    </td>
+    <td>
+        Thus, for example, I find in my mind two wholly diverse ideas of the sun; the one, by which it appears to me extremely small draws its origin from the senses, and should be placed in the class of adventitious ideas; the other, by which it seems to be many times larger than the whole earth, is taken up on astronomical grounds, that is, elicited from certain notions born with me, or is framed by myself in some other manner.
+    </td>
+</tr>
+<tr>
+    <td>
+        utraque profecto similis eidem soli extra me existenti esse non potest, & ratio persuadet illam ei maxime esse dissimilem, quae quàm proxime ab ipso videtur emanasse.
+    </td>
+    <td>
+        These two ideas cannot certainly both resemble the same sun; and reason teaches me that the one which seems to have immediately emanated from it is the most unlike.
+    </td>
+</tr>
+
+
 
 
 </table>
