--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -80,7 +80,33 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 ᾿Αλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν αἱροῦνται.
 
-[126]
+[126] ὁ δὲ σοφὸς οὔτε παραιτεῖται τὸ ζῆν&gt; οὔτε φοβεῖται τὸ μὴ ζῆν·
+
+οὔτε γὰρ αὐτῷ προσίσταται τὸ ζῆν οὔτε δοξάζεται κακὸν εἶναί τι τὸ μὴ ζῆν.
+
+ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἤδιστον καρπίζεται.
+
+Ὁ δὲ παραγγέλλων τὸν μὲν νέον καλῶς ζῆν, τὸν δὲ γέροντα καλῶς καταστρέφειν εὐήθης ἐστὶν οὐ μόνον διὰ τὸ τῆς ζωῆς ἀσπαστόν, ἀλλὰ καὶ διὰ τὸ τὴν αὐτὴν εἶναι μελέτην τοῦ καλῶς ζῆν καὶ τοῦ καλῶς ἀποθνῄσκειν.
+
+πολὺ δὲ χεῖρον καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι,
+</p>
+<p class="indent">
+φύντα δ᾽ ὅπως ὤκιστα πύλας ᾿Αίδαο περῆσαι.
+
+[127] εἰ μὲν γὰρ πεποιθὼς τοῦτό φησι, πῶς οὐκ ἀπέρχεται τοῦ ζῆν;
+
+ἐν ἑτοίμῳ γὰρ αὐτῷ τοῦτ᾽ ἐστίν, εἴ περ ἦν βεβουλευμένον αὐτῷ βεβαίως·
+
+εἰ δὲ μωκώμενος, μάταιος ἐν τοῖς οὐκ ἐπιδεχομένοις.
+
+Μνημονευτέον δὲ ὡς τὸ μέλλον οὔτε ἡμέτερον οὔτε πάντως οὐχ ἡμέτερον, ἵνα μήτε πάντως προσμένωμεν ὡς ἐσόμενον μήτε ἀπελπίζωμεν ὡς πάντως οὐκ ἐσόμενον.
+</p>
+<p class="indent">
+Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
+
+τῶν δ᾽ ἀναγκαίων αἳ μὲν πρὸς εὐδαιμονίαν εἰσὶν ἀναγκαῖαι, αἳ δὲ πρὸς τὴν τοῦ σώματος ἀοχλησίαν, αἳ δὲ πρὸς αὐτὸ τὸ ζῆν.
+
+[128]
 </p>
 <br>
 <br>
