--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -106,7 +106,37 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 τῶν δ᾽ ἀναγκαίων αἳ μὲν πρὸς εὐδαιμονίαν εἰσὶν ἀναγκαῖαι, αἳ δὲ πρὸς τὴν τοῦ σώματος ἀοχλησίαν, αἳ δὲ πρὸς αὐτὸ τὸ ζῆν.
 
-[128]
+[128] τούτων γὰρ ἀπλανὴς θεωρία πᾶσαν αἵρεσιν καὶ φυγὴν ἐπανάγειν οἶδεν ἐπὶ τὴν τοῦ σώματος ὑγίειαν καὶ τὴν &lt;τῆς ψυχῆς&gt; ἀταραξίαν, ἐπεὶ τοῦτο τοῦ μακαρίως ζῆν ἐστι τέλος.
+
+Τούτου γὰρ χάριν πάντα πράττομεν, ὅπως μήτε ἀλγῶμεν μήτε ταρβῶμεν.
+
+ὅταν δὲ ἅπαξ τοῦτο περὶ ἡμᾶς γένηται, λύεται πᾶς ὁ τῆς ψυχῆς χειμών, οὐκ ἔχοντος τοῦ ζῴου βαδίζειν ὡς πρὸς ἐνδέον τι καὶ ζητεῖν ἕτερον ᾧ τὸ τῆς ψυχῆς καὶ τοῦ σώματος ἀγαθὸν συμπληρώσεται.
+
+τότε γὰρ ἡδονῆς χρείαν ἔχομεν, ὅταν ἐκ τοῦ μὴ παρεῖναι τὴν ἡδονὴν ἀλγῶμεν·
+
+&lt;ὅταν δὲ μηδὲν ἀλγῶμεν&gt;, οὐκέτι τῆς ἡδονῆς δεόμεθα.
+
+καὶ διὰ τοῦτο τὴν ἡδονὴν ἀρχὴν καὶ τέλος λέγομεν εἶναι τοῦ μακαρίως ζῆν.
+
+[129] ταύτην γὰρ ἀγαθὸν πρῶτον καὶ συγγενικὸν ἔγνωμεν, καὶ ἀπὸ ταύτης καταρχόμεθα πάσης αἱρέσεως καὶ φυγῆς καὶ ἐπὶ ταύτην καταντῶμεν ὡς κανόνι τῷ πάθει πᾶν ἀγαθὸν κρίνοντες.
+
+Καὶ ἐπεὶ πρῶτον ἀγαθὸν τοῦτο καὶ σύμφυτον, διὰ τοῦτο καὶ οὐ πᾶσαν ἡδονὴν αἱρούμεθα, ἀλλ᾽ ἔστιν ὅτε πολλὰς ἡδονὰς ὑπερβαίνομεν, ὅταν πλεῖον ἡμῖν τὸ δυσχερὲς ἐκ τούτων ἕπηται·
+
+καὶ πολλὰς ἀλγηδόνας ἡδονῶν κρείττους νομίζομεν, ἐπειδὰν μείζων ἡμῖν ἡδονὴ παρακολουθῇ πολὺν χρόνον ὑπομείνασι τὰς ἀλγηδόνας.
+
+Πᾶσα οὖν ἡδονὴ διὰ τὸ φύσιν ἔχειν οἰκείαν ἀγαθόν, οὐ πᾶσα μέντοι &lt;γ᾽&gt; αἱρετή·
+
+καθά περ καὶ ἀλγηδὼν πᾶσα κακόν, οὐ πᾶσα δὲ ἀεὶ φευκτὴ πεφυκυῖα.
+
+[130] τῇ μέντοι συμμετρήσει καὶ συμφερόντων καὶ ἀσυμφόρων βλέψει ταῦτα πάντα κρίνειν καθήκει.
+
+χρώμεθα γὰρ τῷ μὲν ἀγαθῷ κατά τινας χρόνους ὡς κακῷ, τῷ δὲ κακῷ. τἄμπαλιν ὡς ἀγαθῷ.
+
+Καὶ τὴν αὖτάρκειαν δὲ ἀγαθὸν μέγα νομίζομεν, οὐχ ἵνα πάντως τοῖς ὀλίγοις χρώμεθα, ἀλλ᾽ ὅπως ἐὰν μὴ ἔχωμεν τὰ πολλά, τοῖς ὀλίγοις ἀρκώμεθα, πεπεισμένοι γνησίως ὅτι ἥδιστα πολυτελείας ἀπολαύουσιν οἱ ἥκιστα ταύτης δεόμενοι, καὶ ὅτι τὸ μὲν φυσικὸν πᾶν εὐπόριστόν ἐστι, τὸ δὲ κενὸν δυσπόριστον.
+
+οἱ γὰρ λιτοὶ χυλοὶ ἴσην πολυτελεῖ διαίτῃ τὴν ἀηδίαν ἐπιφέρουσιν, ὅταν ἅπαν τὸ ἀλγοῦν κατ᾽ ἔνδειαν ἐξαιρεθῇ·
+
+[131]
 </p>
 <br>
 <br>
