--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -136,7 +136,13 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 οἱ γὰρ λιτοὶ χυλοὶ ἴσην πολυτελεῖ διαίτῃ τὴν ἀηδίαν ἐπιφέρουσιν, ὅταν ἅπαν τὸ ἀλγοῦν κατ᾽ ἔνδειαν ἐξαιρεθῇ·
 
-[131]
+[131] καὶ μαζα καὶ ὕδωρ τὴν ἀκροτάτην ἀποδίδωσιν ἡδονήν, ἐπειδὰν ἐνδέων τις αὐτὰ προσενέγκηται.
+
+τὸ συνεθίζειν οὖν ἐν ταῖς ἁπλαῖς καὶ οὐ πολυτελέσι διαίταις καὶ ὑγιείας ἐστὶ συμπληρωτικὸν καὶ πρὸς τὰς ἀναγκαίας τοῦ βίου χρήσεις ἄοκνον ποιεῖ τὸν ἄνθρωπον καὶ τοῖς πολυτελέσιν ἐκ διαλειμμάτων προσερχομένους κρεῖττον ἡμᾶς διατίθησι καὶ πρὸς τὴν τύχην ἀφόβους παρασκευάζει.
+
+Ὅταν οὖν λέγωμεν ἡδονὴν τέλος ὑπάρχειν, οὐ τὰς τῶν ἀσώτων ἡδονὰς καὶ τὰς ἐν ἀπολαύσει κειμένας λέγομεν, ὥς τινες ἀγνοοῦντες καὶ οὐχ ὁμολογοῦντες ἢ κακῶς ἐκδεχόμενοι νομίζουσιν, ἀλλὰ τὸ μήτε ἀλγεῖν κατὰ σῶμα μήτε ταράττεσθαι κατὰ ψυχήν·
+
+[132]
 </p>
 <br>
 <br>
