--- a/Critique of Pure Reason/Preface to the First Edition.html
+++ b/Critique of Pure Reason/Preface to the First Edition.html
@@ -9,8 +9,9 @@
 <body>
 
 <h1>Kant's Critique of Pure Reason - Preface to the First Edition - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
-The German text is from the original 1781 edition produced in Riga by Johann Friedrich Hartknoch, archived by the Deustches Textarchiv (https://www.deutschestextarchiv.de/book/show/kant_rvernunft_1781), and pulled from Wikisource (https://de.wikisource.org/wiki/Critik_der_reinen_Vernunft_(1781)/Vorrede). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Preface_1).
+
 <h3>Source</h3>
+The German text is from the original 1781 edition produced in Riga by Johann Friedrich Hartknoch, archived by the Deustches Textarchiv (https://www.deutschestextarchiv.de/book/show/kant_rvernunft_1781), and pulled from Wikisource (https://de.wikisource.org/wiki/Critik_der_reinen_Vernunft_(1781)/Vorrede). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Preface_1).
 
 <br>
 <br>
@@ -128,7 +129,22 @@ The German text is from the original 1781 edition produced in Riga by Johann Fri
         The reader must naturally have a strong inducement to co-operate with the present author, if he has formed the intention of erecting a complete and solid edifice of metaphysical science, according to the plan now laid before him. Metaphysics, as here represented, is the only science which admits of completion—and with little labour, if it is united, in a short time; so that nothing will be left to future generations except the task of illustrating and applying it didactically. For this science is nothing more than the inventory of all that is given us by pure reason, systematically arranged. Nothing can escape our notice; for what reason produces from itself cannot lie concealed, but must be brought to the light by reason itself, so soon as we have discovered the common principle of the ideas we seek. The perfect unity of this kind of cognitions, which are based upon pure conceptions, and uninfluenced by any empirical element, or any peculiar intuition leading to determinate experience, renders this completeness not only practicable, but also necessary. <blockquote>Tecum habita, et noris quam sit tibi curta supellex.<a href="#Footnote 3">[3]</a></blockquote>
     </td>
 </tr>
-
+<tr>
+    <td>
+        Ein solches System der reinen (speculativen) Vernunft hoffe ich unter dem Titel: Metaphysik der Natur, selbst zu liefern, welches, bey noch nicht der Hälfte der Weitläuftigkeit, dennoch ungleich reicheren Inhalt haben soll, als hier die Critik, die zuvörderst die Quellen und Bedingungen ihrer Möglichkeit darlegen mußte, und einen ganz verwachsenen Boden zu reinigen und zu ebenen nöthig hatte. Hier erwarte ich an meinem Leser die Gedult und Unpartheylichkeit eines Richters, dort aber die Willfährigkeit und den Beistand eines Mithelfers; denn, so vollständig auch alle Principien zu dem System in der Critik vorgetragen sind, so gehört zur Ausführlichkeit des Systems selbst doch noch, daß es auch an keinen abgeleiteten Begriffen mangele, die man a priori nicht in Ueberschlag bringen kan, sondern die nach und nach aufgesucht werden müssen, imgleichen, da dort die ganze Synthesis der Begriffe erschöpft wurde, so wird überdem hier gefodert, daß eben dasselbe auch in Ansehung der Analysis geschehe, welches alles leicht und mehr Unterhaltung als Arbeit ist.
+    </td>
+    <td> 
+        Such a system of pure speculative reason I hope to be able to publish under the title of Metaphysic of Nature. The content of this work (which will not be half so long) will be very much richer than that of the present Critique, which has to discover the sources of this cognition and expose the conditions of its possibility, and at the same time to clear and level a fit foundation for the scientific edifice. In the present work, I look for the patient hearing and the impartiality of a judge; in the other, for the good-will and assistance of a co-labourer. For, however complete the list of principles for this system may be in the Critique, the correctness of the system requires that no deduced conceptions should be absent. These cannot be presented a priori, but must be gradually discovered; and, while the synthesis of conceptions has been fully exhausted in the Critique, it is necessary that, in the proposed work, the same should be the case with their analysis. But this will be rather an amusement than a labour. 
+    </td>
+</tr>
+<tr>
+    <td>
+        Ich habe nur noch Einiges in Ansehung des Drucks anzumerken. Da der Anfang desselben etwas verspätet war, so konte ich nur etwa die Hälfte der Aushängebogen zu sehen bekommen, in denen ich zwar einige, den Sinn aber nicht verwirrende, Druckfehler antreffe, ausser demienigen, der S. 379. Zeile 4 von unten vorkomt, da specifisch an statt sceptisch gelesen werden muß. Die Antinomie der reinen Vernunft von Seite 425 bis 461, ist so, nach Art einer Tafel, angestellt, daß alles, was zur Thesis gehört, auf der linken, was aber zur Antithesis gehört, auf der rechten Seite immer fortläuft, welches ich darum so anordnete, damit Satz und Gegensatz desto leichter mit einander verglichen werden könte. 
+    </td>
+    <td> 
+        [Hansen's note: Meiklejohn neglects to translate this paragraph. It could go as: "I only have a few things to say about the printing. Since the beginning of the printing was somewhat delayed, I was only able to see about half of the display sheets, in which I found a few printing errors, but they did not confuse the meaning, apart from the one that appears on page 379, line 4 from the bottom, where is should say "specifically" ("specifisch") instead of "skeptically" ("sceptisch"). The Antinomy of Pure Reason from pages 425 to 461 is arranged like a table, so that everything that belongs to the thesis runs on the left side, and everything that belongs to the antithesis runs on the right side, which I arranged in this way so that the proposition and the opposite could be compared with each other more easily."]
+    </td>
+</tr>
 
 </table>
 
