--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -142,7 +142,21 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 Ὅταν οὖν λέγωμεν ἡδονὴν τέλος ὑπάρχειν, οὐ τὰς τῶν ἀσώτων ἡδονὰς καὶ τὰς ἐν ἀπολαύσει κειμένας λέγομεν, ὥς τινες ἀγνοοῦντες καὶ οὐχ ὁμολογοῦντες ἢ κακῶς ἐκδεχόμενοι νομίζουσιν, ἀλλὰ τὸ μήτε ἀλγεῖν κατὰ σῶμα μήτε ταράττεσθαι κατὰ ψυχήν·
 
-[132]
+[132] οὐ γὰρ πότοι καὶ κῶμοι συνείροντες οὐδ᾽ ἀπόλαυσις παίδων καὶ γυναικῶν οὐδ᾽ ἰχθύων καὶ τῶν ἄλλων, ὅσα φέρει πολυτελὴς τράπεζα, τὸν ἡδὺν γεννᾷ βίον, ἀλλὰ νήφων λογισμὸς καὶ τὰς αἰτίας ἐξερευνῶν πάσης αἱρέσεως καὶ φυγῆς καὶ τὰς δόξας ἐξελαύνων, ἐξ ὧν πλεῖστος τὰς ψυχὰς καταλαμβάνει θόρυβος.
+
+Τούτων δὲ πάντων ἀρχὴ καὶ τὸ μέγιστον ἀγαθὸν φρόνησις.
+
+διὸ καὶ φιλοσοφίας τιμιώτερον ὑπάρχει φρόνησις, ἐξ ἧς αἱ λοιπαὶ πᾶσαι πεφύκασιν ἀρεταί, διδάσκουσα ὡς οὐκ ἔστιν ἡδέως ζῆν ἄνευ τοῦ φρονίμως καὶ καλῶς καὶ δικαίως &lt;οὐδὲ φρονίμως καὶ καλῶς καὶ δικαίως&gt; ἄνευ τοῦ ἡδέως.
+
+συμπεφύκασι γὰρ αἱ ἀρεταὶ τῷ ζῆν ἡδέως, καὶ τὸ ζῆν ἡδέως τούτων ἐστὶν ἀχώριστον.
+
+[133] ἐπεὶ τίνα νομίζεις εἶναι κρείττονα τοῦ καὶ περὶ θεῶν ὅσια δοξάζοντος καὶ περὶ θανάτου διὰ παντὸς ἀφόβως ἔχοντος καὶ τὸ τῆς φύσεως ἐπιλελογισμένου τέλος, καὶ τὸ μὲν τῶν ἀγαθῶν πέρας ὡς ἔστιν εὐσυμπλήρωτόν τε καὶ εὐπόριστον διαλαμβάνοντος, τὸ δὲ τῶν κακῶν ὡς ἢ χρόνους ἢ πόνους ἔχει βραχεῖς, τὴν δὲ ὑπό τινων δεσπότιν εἰσαγομένην πάντων διαγελῶντος &lt;εἱμαρμένην καὶ μᾶλλον ἃ μὲν κατ᾽ ἀνάγκην γίγνεσθαι λέγοντος&gt;, ἃ δὲ ἀπὸ τύχης, ἃ δὲ παρ᾽ ἡμᾶς διὰ τὸ τὴν μὲν ἀνάγκην ἀνυπεύθυνον εἶναι, τὴν δὲ τύχην ἄστατον ὁρᾶν, τὸ δὲ παρ᾽ ἡμᾶς ἀδέσποτον, ᾧ καὶ τὸ μεμπτὸν καὶ τὸ ἐναντίον παρακολουθεῖν πέφυκεν
+
+[134] (ἐπεὶ κρεῖττον ἦν τῷ περὶ θεῶν μύθῳ κατακολουθεῖν ἢ τῇ τῶν φυσικῶν εἱμαρμένῃ δουλεύειν·
+
+ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην), τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνοντος (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε ἀβέβαιον αἰτίαν &lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν
+
+[135]
 </p>
 <br>
 <br>
