--- a/Critique of Pure Reason/Transcendental Aesthetic.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic.html
@@ -11,7 +11,7 @@
 <h1>Kant's Critique of Pure Reason - Book 1 Part 1, the Transcendental Aesthetic - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
 
 <h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and publled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)).
+The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)).
 <br>
 <br>
 
