Finished Menoeceus Usener

--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -154,9 +154,14 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 [134] (ἐπεὶ κρεῖττον ἦν τῷ περὶ θεῶν μύθῳ κατακολουθεῖν ἢ τῇ τῶν φυσικῶν εἱμαρμένῃ δουλεύειν·
 
-ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην), τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνοντος (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε ἀβέβαιον αἰτίαν &lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν
+ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην), τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνοντος (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε ἀβέβαιον αἰτίαν (&lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν ἢ κακῶν ὑπὸ ταύτης χορηγεῖσθαι),
 
-[135]
+[135]  κρεῖττον εἶναι νομίζοντος εὐλογίστως ἀτυχεῖν ἢ ἀλογίστως εὐτυχεῖν (βέλτιστον γὰρ ἐν ταῖς πράξεσι τὸ καλῶς κριθὲν ὀρθωθῆναι διὰ ταύτην). 
+</p>
+<p class="indent">
+Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
+
+οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀταθοῖς.
 </p>
 <br>
 <br>
