Started Bailey Menoeceus

--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -25,8 +25,8 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <br>
 ΕΠΙΚΟΥΡΟΣ ΜΕΝΟΙΚΕΙ ΧΑΙΡΕΙΝ
 <br>
-<p class="indent">[122]
-Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
+<p class="indent">
+[122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
 
 οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς το κατὰ ψυχὴν ὑγιαῖνον.
 
