--- a/Critique of Pure Reason/Preface to the Second Edition.html
+++ b/Critique of Pure Reason/Preface to the Second Edition.html
@@ -64,6 +64,31 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         Mathematics and physics are the two theoretical sciences which have to determine their objects a priori. The former is purely a priori, the latter is partially so, but is also dependent on other sources of cognition.
     </td>
 </tr>
+<tr>
+    <td>
+        Die Mathematik ist von den frühesten Zeiten her, wohin die Geschichte der menschlichen Vernunft reicht, in dem bewundernswürdigen Volke der Griechen den sichern Weg einer Wissenschaft gegangen. Allein man darf nicht denken, daß es ihr so leicht geworden, wie der Logik, wo die Vernunft es nur mit sich selbst zu thun hat, jenen königlichen Weg zu treffen, oder vielmehr sich selbst zu bahnen; vielmehr glaube ich, daß es lange mit ihr (vornehmlich noch unter den Aegyptern) beym Herumtappen geblieben ist und diese Umänderung einer Revolution zuzuschreiben sey, die der glückliche Einfall eines einzigen Mannes in einem Versuche zu Stande brachte, von welchem an die Bahn, die man nehmen mußte, nicht mehr zu verfehlen war, und der sichere Gang einer Wissenschaft für alle Zeiten und in unendliche Weiten eingeschlagen und vorgezeichnet war. Die Geschichte dieser Revolution der Denkart, welche viel wichtiger war als die Entdeckung des Weges um das berühmte Vorgebirge, und des Glücklichen, der sie zu Stande brachte, ist uns nicht aufbehalten. Doch beweiset die Sage, welche Diogenes der Laertier uns überliefert, der von den kleinesten, und, nach dem gemeinen Urtheil, gar nicht einmal eines Beweises benöthigten, Elementen der geometrischen Demonstrationen den angeblichen Erfinder nennt, daß das Andenken der Veränderung, die durch die erste Spur der Entdeckung dieses neuen Weges bewirkt wurde, den Mathematikern äußerst wichtig geschienen haben müsse, und dadurch unvergeßlich geworden sey. Dem ersten, der den gleichseitigen Triangel demonstrirte (er mag nun Thales oder wie man will geheißen haben,) dem ging ein Licht auf; denn er fand, daß er nicht dem, was er in der Figur sahe, oder auch dem bloßen Begriffe derselben nachspüren und gleichsam davon ihre Eigenschaften ablernen, sondern durch das, was er nach Begriffen selbst a priori hineindachte und darstellete, (durch Construction) hervorbringen müsse, und daß er, um sicher etwas a priori zu wissen, er der Sache nichts beylegen müsse, als was aus dem nothwendig folgte, was er seinem Begriffe gemäß selbst in sie gelegt hat.
+    </td>
+    <td> 
+        In the earliest times of which history affords us any record, mathematics had already entered on the sure course of science, among that wonderful nation, the Greeks. Still it is not to be supposed that it was as easy for this science to strike into, or rather to construct for itself, that royal road, as it was for logic, in which reason has only to deal with itself. On the contrary, I believe that it must have remained long—chiefly among the Egyptians—in the stage of blind groping after its true aims and destination, and that it was revolutionized by the happy idea of one man, who struck out and determined for all time the path which this science must follow, and which admits of an indefinite advancement. The history of this intellectual revolution—much more important in its results than the discovery of the passage round the celebrated Cape of Good Hope—and of its author, has not been preserved. But Diogenes Laertius, in naming the supposed discoverer of some of the simplest elements of geometrical demonstration—elements which, according to the ordinary opinion, do not even require to be proved—makes it apparent that the change introduced by the first indication of this new path, must have seemed of the utmost importance to the mathematicians of that age, and it has thus been secured against the chance of oblivion. A new light must have flashed on the mind of the first man (Thales, or whatever may have been his name) who demonstrated the properties of the isosceles triangle. For he found that it was not sufficient to meditate on the figure, as it lay before his eyes, or the conception of it, as it existed in his mind, and thus endeavour to get at the knowledge of its properties, but that it was necessary to produce these properties, as it were, by a positive a priori construction; and that, in order to arrive with certainty at a priori cognition, he must not attribute to the object any other properties than those which necessarily followed from that which he had himself, in accordance with his conception, placed in the object.
+    </td>
+</tr>
+<tr>
+    <td>
+        Mit der Naturwissenschaft ging es weit langsamer zu, bis sie den Heeresweg der Wissenschaft traf; denn es sind nur etwa anderthalb Jahrhunderte, daß der Vorschlag des sinnreichen Baco von Verulam diese Entdeckung theils veranlaßte, theils, da man bereits auf der Spur derselben war, mehr belebte, welche eben sowol nur durch eine schnell vorgegangene Revolution der Denkart erklärt werden kann. Ich will hier nur die Naturwissenschaft, so fern sie auf empirische Principien gegründet ist, in Erwägung ziehen.
+    </td>
+    <td> 
+        A much longer period elapsed before physics entered on the highway of science. For it is only about a century and a half since the wise Bacon gave a new direction to physical studies, or rather—as others were already on the right track—imparted fresh vigour to the pursuit of this new direction. Here, too, as in the case of mathematics, we find evidence of a rapid intellectual revolution. In the remarks which follow I shall confine myself to the empirical side of natural science.
+    </td>
+</tr>
+<tr>
+    <td>
+        Als Galilei seine Kugeln die schiefe Fläche mit einer von ihm selbst gewählten Schwere herabrollen, oder Torricelli die Luft ein Gewicht, was er sich zum voraus dem einer ihm bekannten Wassersäule gleich gedacht hatte, tragen ließ, oder in noch späterer Zeit Stahl Metalle in Kalk und diesen wiederum in Metall verwandelte, indem er ihnen etwas entzog und wiedergab;<a href="#Footnote 1">[1]</a> so ging allen Naturforschern ein Licht auf. Sie begriffen, daß die Vernunft nur das einsieht, was sie selbst nach ihrem Entwurfe hervorbringt, daß sie mit Principien ihrer Urtheile nach beständigen Gesetzen vorangehen und die Natur nöthigen müsse, auf ihre Fragen zu antworten, nicht aber sich von ihr allein gleichsam am Leitbande gängeln lassen müsse; denn sonst hängen zufällige, nach keinem vorher entworfenen Plane gemachte Beobachtungen gar nicht in einem nothwendigen Gesetze zusammen, welches doch die Vernunft sucht und bedarf. Die Vernunft muß mit ihren Principien, nach denen allein übereinkommende Erscheinungen für Gesetze gelten können, in einer Hand, und mit dem Experiment, das sie nach jenen ausdachte, in der anderen, an die Natur gehen, zwar um von ihr belehrt zu werden, aber nicht in der Qualität eines Schülers, der sich alles vorsagen läßt, was der Lehrer will, sondern eines bestallten Richters, der die Zeugen nöthigt, auf die Fragen zu antworten, die er ihnen vorlegt. Und so hat sogar Physik die so vortheilhafte Revolution ihrer Denkart lediglich dem Einfalle zu verdanken, demjenigen, was die Vernunft selbst in die Natur hineinlegt, gemäß, dasjenige in ihr zu suchen, (nicht ihr anzudichten) was sie von dieser lernen muß, und wovon sie für sich selbst nichts wissen würde. Hiedurch ist die Naturwissenschaft allererst in den sicheren Gang einer Wissenschaft gebracht worden, da sie so viel Jahrhunderte durch nichts weiter als ein bloßes Herumtappen gewesen war.
+    </td>
+    <td> 
+        When Galilei experimented with balls of a definite weight on the inclined plane, when Torricelli caused the air to sustain a weight which he had calculated beforehand to be equal to that of a definite column of water, or when Stahl, at a later period, converted metals into lime, and reconverted lime into metal, by the addition and subtraction of certain elements;<a href="#Footnote 1">[1]</a> a light broke upon all natural philosophers. They learned that reason only perceives that which it produces after its own design; that it must not be content to follow, as it were, in the leading-strings of nature, but must proceed in advance with principles of judgement according to unvarying laws, and compel nature to reply its questions. For accidental observations, made according to no preconceived plan, cannot be united under a necessary law. But it is this that reason seeks for and requires. It is only the principles of reason which can give to concordant phenomena the validity of laws, and it is only when experiment is directed by these rational principles that it can have any real utility. Reason must approach nature with the view, indeed, of receiving information from it, not, however, in the character of a pupil, who listens to all that his master chooses to tell him, but in that of a judge, who compels the witnesses to reply to those questions which he himself thinks fit to propose. To this single idea must the revolution be ascribed, by which, after groping in the dark for so many centuries, natural science was at length conducted into the path of certain progress.
+    </td>
+</tr>
+
 
 </table>
 
@@ -73,12 +98,24 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 <th>German text</th>
 <th>English text</th>
 </tr>
+<tr>
+    <td>
+        <a id="Footnote 1">[1]</a> Ich folge hier nicht genau dem Faden der Geschichte der Experimentalmethode, deren erste Anfänge auch nicht wohl bekannt sind.
+    </td>
+    <td> 
+        <a id="Footnote 1">[1]</a> I do not here follow with exactness the history of the experimental method, of which, indeed, the first steps are involved in some obscurity.
+    </td>
+</tr>
 
 </table>
 
 <h1>Commentary</h1>
 
 <h3>Summary</h3>
+
+<h3>Discussion</h3>
+
+<p>This history of science is even more offensive than the one given in the Preface to the First Edition. Kant here tries to argue that the birth of modern mechanics and chemistry is somehow supportive of his transcendental idealism, since scientists find it useful to formulate general principles, which they then test using experiments, rather than simply recording isolated and random facts. The latter method might work if we had infinite time and infinite memory capacity, but limitations in the human being make the former method more practicable. It does not show at all that we somehow impose the laws of nature on the physical world. But most offensive of all is that he attempts to coopt the success of modern science for his own philosophy. In fact, the sucess of modern science is due to a resurgence in the belief of atomism and materialism, coupled with mathematical advances and the increased use of empirical observations and controlled experiments. The success of modern science is precisely what Kant is trying to counter in the First Critique! For it renders all the doctrines of Christianity suspect, and makes room for a resurgence in Epicureanism and Stoicism. But you have to admire the Kant's gall in suggesting that it actually supports his view.</p>
 
 </body>
 </html>
