--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -80,6 +80,118 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
         First of all believe that god is a being immortal and blessed, even as the common idea of a god is engraved on men’s minds, and do not assign to him anything alien to his immortality or ill-suited to his blessedness:
     </td>
 </tr>
+<tr>
+    <td>
+        πᾶν δὲ τὸ φυλάττειν αὐτοῦ δυνάμενον τὴν μετὰ ἀφθαρσίας μακαριότητα περὶ αὐτὸν δόξαζε.
+    </td>
+    <td> 
+        but believe about him everything that can uphold his blessedness and immortality.
+    </td>
+</tr>
+<tr>
+    <td>
+        θεοὶ μὲν γὰρ εἰσίν·
+    </td>
+    <td> 
+        For gods they are,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐναργὴς γὰρ αὐτῶν ἐστιν ἡ γνῶσις.
+    </td>
+    <td> 
+        since the knowledge of them is by clear vision.
+    </td>
+</tr>
+<tr>
+    <td>
+        οἵους δ᾽ αὐτοὺς &lt;οἱ&gt; πολλοὶ νομίζουσιν, οὐκ εἰσίν·
+    </td>
+    <td> 
+        But they are not such as the many believe them to be:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ φυλάττουσιν αὐτοὺς οἵους νομίζουσιν.
+    </td>
+    <td> 
+        for indeed they do not consistently represent them as they believe them to be.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀσεβὴς δὲ οὐχ ὁ τοὺς τῶν πολλῶν θεοὺς ἀναιρῶν, ἀλλ᾽ ὁ τὰς τῶν πολλῶν δόξας θεοῖς προσάπτων.
+    </td>
+    <td> 
+        And the impious man is not he who denies the gods of the many, but he who attaches to the gods the beliefs of the many.
+    </td>
+</tr>
+<tr>
+    <td>
+        [124] οὐ γὰρ προλήψεις εἰσὶν ἀλλ᾽ ὑπολήψεις ψευδεῖς αἱ τῶν πολλῶν ὑπὲρ θεῶν ἀποφάσεις, ἔνθεν αἱ μέγισται βλάβαι τε τοῖς κακοῖς ἐκ θεῶν ἐπάγονται καὶ ὠφέλειαι &lt;τοῖς ἀγαθοῖς&gt;.
+    </td>
+    <td> 
+        [124] For the statements of the many about the gods are not conceptions derived from sensation, but false suppositions, according to which the greatest misfortunes befall the wicked and the greatest blessings (the good) by the gift of the gods.
+    </td>
+</tr>
+<tr>
+    <td>
+        ταῖς γὰρ ἰδίαις οἰκειούμενοι διὰ παντὸς ἀρεταῖς τοὺς ὁμοίους ἀποδέχονται, πᾶν τὸ μὴ τοιοῦτον ὡς ἀλλότριον νομίζοντες.
+    </td>
+    <td> 
+        For men being accustomed always to their own virtues welcome those like themselves, but regard all that is not of their nature as alien.
+    </td>
+</tr>
+<tr>
+    <td>
+        Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
+    </td>
+    <td> 
+        Become accustomed to the belief that death is nothing to us.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐπεὶ πᾶν ἀγαθὸν καὶ κακὸν ἐν αἰσθήσει·
+    </td>
+    <td> 
+        For all good and evil consists in sensation,
+    </td>
+</tr>
+<tr>
+    <td>
+        στέρησις δὲ ἐστὶν αἰσθήσεως ὁ θάνατος.
+    </td>
+    <td> 
+        but death is deprivation of sensation.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅθεν γνῶσις ὀρθὴ τοῦ μηθὲν εἶναι πρὸς ἡμᾶς τὸν θάνατον ἀπολαυστὸν ποιεῖ τὸ τῆς ζωῆς θνητόν, οὐκ ἄπειρον προστιθεῖσα χρόνον ἀλλὰ τὸν τῆς ἀθανασίας ἀφελομένη πόθον.
+    </td>
+    <td> 
+        And therefore a right understanding that death is nothing to us makes the mortality of life enjoyable, not because it adds to it an infinite span of time, but because it takes away the craving for immortality.
+    </td>
+</tr>
+<tr>
+    <td>
+        [125]
+    </td>
+    <td> 
+        [125]
+    </td>
+</tr>
+<tr>
+    <td>
+        
+    </td>
+    <td> 
+        
+    </td>
+</tr>
 
 </table>
 </body>
