--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -53,12 +53,12 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 ἀσεβὴς δὲ οὐχ ὁ τοὺς τῶν πολλῶν θεοὺς ἀναιρῶν, ἀλλ᾽ ὁ τὰς τῶν πολλῶν δόξας θεοῖς προσάπτων.
 
-[124] οὐ γὰρ προλήψεις εἰσὶν ἀλλ᾽ ὑπολήψεις ψευδεῖς αἱ τῶν πολλῶν ὑπὲρ θεῶν ἀποφάσεις, ἔνθεν αἱ μέγισται βλάβαι τε τοῖς κακοῖς ἐκ θεῶν ἐπάγονται καὶ ὠφέλειαι &lt;τοῖς ἀγαθοῖςν&gt;.
+[124] οὐ γὰρ προλήψεις εἰσὶν ἀλλ᾽ ὑπολήψεις ψευδεῖς αἱ τῶν πολλῶν ὑπὲρ θεῶν ἀποφάσεις, ἔνθεν αἱ μέγισται βλάβαι τε τοῖς κακοῖς ἐκ θεῶν ἐπάγονται καὶ ὠφέλειαι &lt;τοῖς ἀγαθοῖς&gt;.
 
 ταῖς γὰρ ἰδίαις οἰκειούμενοι διὰ παντὸς ἀρεταῖς τοὺς ὁμοίους ἀποδέχονται, πᾶν τὸ μὴ τοιοῦτον ὡς ἀλλότριον νομίζοντες.
 </p>
 <p class="indent">
-Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἣμᾶς εἶναι τὸν θάνατον·
+Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
 
 ἐπεὶ πᾶν ἀγαθὸν καὶ κακὸν ἐν αἰσθήσει·
 
