--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -178,10 +178,162 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [125]
+        [125] οὐθὲν γάρ ἐστιν ἐν τῷ ζῆν δεινὸν τῷ κατειληφότι γνησίως τὸ μηδὲν ὑπάρχειν ἐν τῷ μὴ ζῆν δεινόν.
     </td>
     <td> 
-        [125]
+        [125] For there is nothing terrible in life for the man who has truly comprehended that there is nothing terrible in not living.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε μάταιος ὁ λέγων δεδιέναι τὸν θάνατον οὐχ ὅτι λυπήσει παρών, ἀλλ᾽ ὅτι λυπεῖ μέλλων.
+    </td>
+    <td> 
+        So that the man speaks but idly who says that he fears death not because it will be painful when it comes, but because it is painful in anticipation.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὃ γὰρ παρὸν οὐκ ἐνοχλεῖ, προσδοκώμενον κενῶς λυπεῖ.
+    </td>
+    <td> 
+        For that which gives no trouble. when it comes, is but an empty pain in anticipation.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ φρικωδέστατον οὖν τῶν κακῶν ὁ θάνατος οὐθὲν πρὸς ἡμᾶς, ἐπειδήπερ ὅταν μὲν ἡμεῖς ὦμεν, ὁ θάνατος οὐ πάρεστιν·
+    </td>
+    <td> 
+        So death, the most terrifying of ills, is nothing to us, since so long as we exist, death is not with us; 
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅταν δ᾽ ὁ θάνατος παρῇ, τόθ᾽ ἡμεῖς οὐκ ἐσμέν.
+    </td>
+    <td> 
+        but when death comes, then we do not exist.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε οὖν πρὸς τοὺς ζῶντας ἐστὶν οὔτε πρὸς τοὺς τετελευτηκότας, ἐπειδήπερ περὶ οὕς μὲν οὐκ ἔστιν, οἳ δ᾽ οὐκέτ᾽ εἰσίν.
+    </td>
+    <td> 
+        It does not then concern either the living or the dead, since for the former it is not, and the latter are no more.
+    </td>
+</tr>
+<tr>
+    <td>
+        ᾿Αλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν ποθοῦσιν.
+    </td>
+    <td> 
+        But the many at one moment shun death as the greatest of evils, at another (yearn for it) as a respite from the &lt;evils&gt; in life.
+    </td>
+</tr>
+<tr>
+    <td>
+        [126] ὁ δὲ σοφὸς οὔτε παραιτεῖται τὸ ζῆν&gt; οὔτε φοβεῖται τὸ μὴ ζῆν·
+    </td>
+    <td> 
+        [126] &lt;But the wise man neither seeks to escape life&gt; nor fears the cessation of life,
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε γὰρ αὐτῷ προσίσταται τὸ ζῆν οὔτε δοξάζεται κακὸν εἶναί τι τὸ μὴ ζῆν.
+    </td>
+    <td> 
+        for neither does life offend him nor does the absence of life seem to be any evil.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιστον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἤδιστον καρπίζεται.
+    </td>
+    <td> 
+        And just as with food he does not seek simply the larger share and nothing else, but rather the most pleasant, so he seeks to enjoy not the longest period of time, but the most pleasant.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ὁ δὲ παραγγέλλων τὸν μὲν νέον καλῶς ζῆν, τὸν δὲ γέροντα καλῶς καταστρέφειν εὐήθης ἐστὶν οὐ μόνον διὰ τὸ τῆς ζωῆς ἀσπαστόν, ἀλλὰ καὶ διὰ τὸ τὴν αὐτὴν εἶναι μελέτην τοῦ καλῶς ζῆν καὶ τοῦ καλῶς ἀποθνῄσκειν.
+    </td>
+    <td> 
+        And he who counsels the young man to live well, but the old man to make a good end, is foolish, not merely because of the desirability of life, but also because it is the same training which teaches to live well and to die well.
+    </td>
+</tr>
+<tr>
+    <td>
+        πολὺ δὲ χεῖρων καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι,
+    </td>
+    <td> 
+        Yet much worse still is the man who says it is good not to be born, but
+    </td>
+</tr>
+<tr>
+    <td>
+        φύντα δ᾽ ὅπως ὤκιστα πύλας ᾿Αίδαο περῆσαι.
+    </td>
+    <td> 
+        'once born make haste to pass the gates of Death'.
+    </td>
+</tr>
+<tr>
+    <td>
+        [127] Εἰ μὲν γὰρ πεποιθὼς τοῦτό φησι, πῶς οὐκ ἀπέρχεται ἐκ τοῦ ζῆν;
+    </td>
+    <td> 
+        [127] For if he says this from conviction why does he not pass away out of life?
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐν ἑτοίμῳ γὰρ αὐτῷ τοῦτ᾽ ἐστίν, εἴ περ ἦν βεβουλευμένον αὐτῷ βεβαίως·
+    </td>
+    <td> 
+        For it is open to him to do so, if he had firmly made up his mind to this.
+    </td>
+</tr>
+<tr>
+    <td>
+        εἰ δὲ μωκώμενος, μάταιος ἐν τοῖς οὐκ ἐπιδεχομένοις.
+    </td>
+    <td> 
+        But if he speaks in jest, his words are idle among men who cannot receive them.
+    </td>
+</tr>
+<tr>
+    <td>
+        Μνημονευτέον δὲ ὡς τὸ μέλλον οὔτε ἡμέτερον οὔτε πάντως οὐχ ἡμέτερον, ἵνα μήτε πάντως προσμένωμεν ὡς ἐσόμενον μήτε ἀπελπίζωμεν ὡς πάντως οὐκ ἐσόμενον.
+    </td>
+    <td>
+        We must then bear in mind that the future is neither ours, nor yet wholly not ours, so that we may not altogether expect it as sure to come, nor abandon hope of it, as if it will certainly not come.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
+    </td>
+    <td> 
+        We must consider that of desires some are natural, others vain, and of the natural some are necessary and others merely natural;
+    </td> 
+</tr>
+<tr>
+    <td>
+        τῶν δ᾽ ἀναγκαίων αἳ μὲν πρὸς εὐδαιμονίαν εἰσὶν ἀναγκαῖαι, αἳ δὲ πρὸς τὴν τοῦ σώματος ἀοχλησίαν, αἳ δὲ πρὸς αὐτὸ τὸ ζῆν.
+    </td>
+    <td> 
+        and of the necessary some are necessary for happiness, others for the repose of the body, and others for very life.
+    </td>
+</tr>
+<tr>
+    <td>
+        [128]
+    </td>
+    <td> 
+        [128]
     </td>
 </tr>
 <tr>
