--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -330,18 +330,58 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [128]
+        [128] τούτων γὰρ ἀπλανὴς θεωρία πᾶσαν αἵρεσιν καὶ φυγὴν ἐπανάγειν οἶδεν ἐπὶ τὴν τοῦ σώματος ὑγίειαν καὶ τὴν &lt;τῆς ψυχῆς&gt; ἀταραξίαν, ἐπεὶ τοῦτο τοῦ μακαρίως ζῆν ἐστι τέλος.
     </td>
     <td> 
-        [128]
+        [128] The right understanding of these facts enables us to refer all choice and avoidance to the health of the body and &lt;the soul’s&gt; freedom from disturbance, since this is the aim of the life of blessedness.
     </td>
 </tr>
 <tr>
     <td>
-        
+        τούτου γὰρ χάριν πάντα πράττομεν, ὅπως μήτε ἀλγῶμεν μήτε ταρβῶμεν.
     </td>
     <td> 
-        
+        For it is to obtain this end that we always act, namely, to avoid pain and fear.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅταν δὲ ἅπαξ τοῦτο περὶ ἡμᾶς γένηται, λύεται πᾶς ὁ τῆς ψυχῆς χειμών, οὐκ ἔχοντος τοῦ ζῴου βαδίζειν ὡς πρὸς ἐνδέον τι καὶ ζητεῖν ἕτερον ᾧ τὸ τῆς ψυχῆς καὶ τὸ τοῦ σώματος ἀγαθὸν συμπληρώσεται.
+    </td>
+    <td> 
+        And when this is once secured for us, all the tempest of the soul is dispersed, since the living creature has not to wander as though in search of something that is missing, and to look for some other thing by which he can fulfil the good of the soul and the good of the body.
+    </td>
+</tr>
+<tr>
+    <td>
+        τότε γὰρ ἡδονῆς χρείαν ἔχομεν, ὅταν ἐκ τοῦ μὴ παρεῖναι τὴν ἡδονὴν ἀλγῶμεν·
+    </td>
+    <td> 
+        For it is then that we have need of pleasure, when we feel pain owing to the absence of pleasure;
+    </td>
+</tr>
+<tr>
+    <td>
+        &lt;ὅταν δὲ μὴ ἀλγῶμεν&gt;, οὐκέτι τῆς ἡδονῆς δεόμεθα.
+    </td>
+    <td> 
+        &lt;but when we do not feel pain&gt;, we no longer need pleasure.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ διὰ τοῦτο τὴν ἡδονὴν ἀρχὴν καὶ τέλος λέγομεν εἶναι τοῦ μακαρίως ζῆν.
+    </td>
+    <td> 
+        And for this cause we call pleasure the beginning and end of the blessed life.
+    </td>
+</tr>
+<tr>
+    <td>
+        [129]
+    </td>
+    <td> 
+        [129]
     </td>
 </tr>
 
